# Computer-Vision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
face-emotion-detector/: README.md  app.py  requirements.txt
finger-counter/: README.md  requirements.txt  streamlit_app.py
finger-counter/src/: advanced_finger_counter.py  finger_counter.py  hand_detector.py
invisible-cloak/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  requirments.text  requirments.txt
invisible-cloak/scripts/: test_dotenv.py
invisible-cloak/src/: .env  .env.example  invisible_cloak.py
